--- a/my-page/src/App.css
+++ b/my-page/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  padding-bottom: 50px;
 }
 a {
   text-decoration: none;
@@ -14,4 +15,37 @@ a {
   color: green;
   font-weight: medium;
   font-style: italic;
+}
+button { 
+  display: block;
+  text-align: center;
+  margin: 0 auto;
+  max-width: 100px;
+  padding: 10px 25px;
+  font-size: 18px;
+  color: #fff;
+  background-color: rgb(104, 192, 61);
+  cursor: pointer;
+}
+button:disabled {
+  background-color: #bab8b8;
+  cursor: initial;
+}
+.alert {
+  color: red;
+  opacity: 0;
+  transition: opacity .3s ease;
+}
+.enable {
+  opacity: 1;
+}
+.wrapBtn { 
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+  max-width: 300px;
+  margin: 0 auto;
+}
+.wrapBtn button:last-of-type {
+  background-color: rgb(81, 64, 198);
 }
